@@ -16,6 +16,8 @@ linotp (3.2~0dev-0) buster-dev; urgency=low
   * add grace to license volume exceeding and display accordingly a message
     in the the web ui
   * add extended information in HOTP/TOTP CSV import UI
+  * The CLI now uses a common time format for all backup filenames. The format
+    is configurable via config BACKUP_FILE_TIME_FORMAT.
 
 
  -- LinOTP Packaging <packaging@linotp.de>  Thu, 9 Sep 2021 17:13:51 +0200
